--- a/ponto/ponto/app/views/funcionarios/_form.html.erb
+++ b/ponto/ponto/app/views/funcionarios/_form.html.erb
@@ -19,6 +19,10 @@
     <%= f.label :ativo %><br>
     <%= f.check_box :ativo %>
   </div>
+  <div class="field">
+    <%= f.label :setor %><br>
+    <%= f.collection_select :setor, Setor.all, :id, :descricao, {prompt: '--Selecione um setor--'} %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
