--- a/ponto/ponto/app/views/funcionarios/index.html.erb
+++ b/ponto/ponto/app/views/funcionarios/index.html.erb
@@ -5,6 +5,7 @@
     <tr>
       <th>Nome</th>
       <th>Ativo</th>
+      <th>Setor</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,6 +15,7 @@
       <tr>
         <td><%= funcionario.nome %></td>
         <td><%= funcionario.ativo %></td>
+        <td><%= funcionario.setor ? funcionario.setor.descricao : "" %></td>
         <td><%= link_to 'Show', funcionario %></td>
         <td><%= link_to 'Edit', edit_funcionario_path(funcionario) %></td>
         <td><%= link_to 'Destroy', funcionario, method: :delete, data: { confirm: 'Are you sure?' } %></td>
