--- a/ponto/ponto/app/views/funcionarios/index.html.erb
+++ b/ponto/ponto/app/views/funcionarios/index.html.erb
@@ -5,7 +5,9 @@
             <div class="panel-heading">
               <h3 class="panel-title">Funcion&aacute;rios</h3>
               <div class="pull-right">
-                <span class="clickable filter" data-toggle="tooltip" title="Toggle table filter" data-container="body">  								<i class="glyphicon glyphicon-filter"></i>  							</span>
+                <span class="clickable filter" data-toggle="tooltip" title="Toggle table filter" data-container="body">  								
+                  <i class="glyphicon glyphicon-filter"></i>  							
+                </span>
               </div>
             </div>
             <div class="panel-body">
@@ -24,13 +26,17 @@
               <tbody>
                 <% @funcionarios.each do |funcionario| %>
                 <tr>
-                  <td><%= funcionario.id %></td>
+                  <td><%= link_to funcionario.id, funcionario %></td>
                   <td><%= funcionario.nome %></td>
                   <td>Vendas</td>
                   <td style="color: green; font-weight:bold">+ 32:40</td>
                   <td class="coluna_dir">
-                    <a class="btn btn-primary btn-xs" title="Abonar horas" data-toggle="modal" data-target="#abonar_horas">                      <span class="glyphicon glyphicon-thumbs-up"></span>                                      </a>
-                    <a class="btn btn-primary btn-xs" title="Pagar horas extras" data-toggle="modal" data-target="#horas_extras">                      <span class="glyphicon glyphicon-usd"></span>                                      </a>
+                    <a class="btn btn-primary btn-xs" title="Abonar horas" data-toggle="modal" data-target="#abonar_horas">                      
+                      <span class="glyphicon glyphicon-thumbs-up"></span>                                      
+                    </a>
+                    <a class="btn btn-primary btn-xs" title="Pagar horas extras" data-toggle="modal" data-target="#horas_extras">
+                      <span class="glyphicon glyphicon-usd"></span>                                      
+                    </a>
                   </td>
                 </tr>
                 <% end %>
@@ -39,6 +45,88 @@
           </div>
         </div>
       </div>
+
+
+      <div class="row">
+        <div class="modal fade" id="abonar_horas" tabindex="-1" role="dialog" aria-labelledby="contactLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="panel panel-primary">
+              <div class="panel-heading">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 class="panel-title" id="contactLabel">Abonar horas de: #1 Maria das dores</h4>
+              </div>
+              <form action="#" method="post" accept-charset="utf-8">
+                <div class="modal-body" style="padding: 5px;">
+                  <div class="row">
+                    <div class="col-sm-5 col-md-5 col-lg-5" style="padding-bottom: 10px;">
+                      <div class="form-group">
+                        <label class="control-label">Data:</label>
+                        <div class="controls">
+                          <input type="text" class="form-control" required="" autofocus="true">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-3 col-md-3 col-lg-3" style="padding-bottom: 10px;">
+                      <div class="form-group">
+                        <label class="control-label">Horas à abonar:</label>
+                        <div class="controls">
+                          <input type="text" class="form-control" required="">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row" style="margin-bottom:10px">
+                    <div class="col-sm-12 col-md-12 col-lg-12">
+                      <label class="form-label">Justificativa:</label>
+                      <textarea class="form-control"></textarea>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel-footer" style="margin-bottom:-14px;">
+                  <input type="submit" class="btn btn-success" value="Gravar">
+                  <input type="reset" class="btn btn-danger" value="Limpar">
+                  <button style="float: right;" type="button" class="btn btn-default btn-close" data-dismiss="modal">Fechar</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="row">
+        <div class="modal fade" id="horas_extras" tabindex="-1" role="dialog" aria-labelledby="contactLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="panel panel-primary">
+              <div class="panel-heading">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 class="panel-title" id="contactLabel">Pagar horas extras à: #1 Maria das dores</h4>
+              </div>
+              <form action="#" method="post" accept-charset="utf-8">
+                <div class="modal-body" style="padding: 5px;">
+                  <div class="row">
+                    <div class="col-sm-3 col-md-3 col-lg-3" style="padding-bottom: 10px;">
+                      <div class="form-group">
+                        <label class="control-label">Horas à pagar:</label>
+                        <div class="controls">
+                          <input type="text" class="form-control" required="">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel-footer" style="margin-bottom:-14px;">
+                  <input type="submit" class="btn btn-success" value="Gravar">
+                  <input type="reset" class="btn btn-danger" value="Limpar">
+                  <button style="float: right;" type="button" class="btn btn-default btn-close" data-dismiss="modal">Fechar</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
     </div>
 
 <!--
