--- a/ponto/ponto/app/views/layouts/application.html.erb
+++ b/ponto/ponto/app/views/layouts/application.html.erb
@@ -3,9 +3,12 @@
 <html>
   
   <head>
-    <title>Justified Nav</title>
+    <title>EvajoluTI - Sistema de Controle de Cartão Ponto</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="allstyle.css">
+    <title>Ponto</title>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <% javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <% csrf_meta_tags %>
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
@@ -21,13 +24,10 @@
       }
       /* Main marketing message and sign up button */
       .jumbotron {
-        text-align: center;
+        /*text-align: center;*/
         background-color: transparent;
       }
-      .jumbotron .btn {
-        font-size: 21px;
-        padding: 14px 24px;
-      }
+      
       /* Customize the nav-justified links to be fill the entire space of the .navbar */
       .nav-justified {
         background-color: #eee;
@@ -72,6 +72,12 @@
         border-bottom: 0;
         border-radius: 0 0 5px 5px;
       }
+
+      #menu_principal li a {
+        padding-left: 8px; 
+        padding-right: 8px
+      }
+
       @media(min-width: 768px) {
         .nav-justified {
           max-height: 52px;
@@ -105,7 +111,7 @@
       <div class="masthead">
         <div class="row" style="margin-top:10px">
           <div class="col-sm-3 col-md-3 col-lg-3">
-            <img src="">
+            <%= image_tag('logo.png') %>
           </div>
           <div class="col-sm-9 col-md-9 col-lg-9" style="text-align:right">
             <label class="form-label">Bem vindo Tiago Capistrano!</label>
@@ -113,13 +119,13 @@
         </div>
         <ul class="nav nav-justified" id="menu_principal">
           <li class="active">
-            <a href="principal.html" style="padding-left: 8px; padding-right: 8px">Principal</a>
+            <a href="principal.html" style="">Principal</a>
           </li>
           <li>
-            <a href="usuarios.html" style="padding-left: 8px; padding-right: 8px">Usu&aacute;rios</a>
+            <%= link_to 'Usuários', usuarios_path %>
           </li>
           <li>
-            <a href="funcionarios.html" style="padding-left: 8px; padding-right: 8px">Funcion&aacute;rios</a>
+            <%= link_to 'Funcionários', funcionarios_path %>
           </li>
           <li>
             <a href="divergencias.html" style="padding-left: 8px; padding-right: 8px">Diverg&ecirc;ncias</a>
@@ -149,19 +155,3 @@
   </body>
 
 </html>
-<!--
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Ponto</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-
-<%= yield %>
-
-</body>
-</html>
--->
