--- a/leitora/leitora/app/views/registers/index.html.erb
+++ b/leitora/leitora/app/views/registers/index.html.erb
@@ -1,11 +1,15 @@
 <h1>Listing registers</h1>
 
+<%= link_to 'New Register', new_register_path %>
+
 <table>
   <thead>
     <tr>
+      <th>#</th>
       <th>Data</th>
       <th>Hora</th>
       <th>Funcionario</th>
+      <th>Status</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,9 +17,11 @@
   <tbody>
     <% @registers.each do |register| %>
       <tr>
+        <td><%= register.id %></td>
         <td><%= register.data %></td>
         <td><%= register.hora %></td>
         <td><%= register.funcionario %></td>
+        <td><%= register.status? ? register.status : '--' %></td>
         <td><%= link_to 'Show', register %></td>
         <td><%= link_to 'Edit', edit_register_path(register) %></td>
         <td><%= link_to 'Destroy', register, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -23,7 +29,3 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Register', new_register_path %>
