--- a/ponto/ponto/app/views/funcionarios/index.html.erb
+++ b/ponto/ponto/app/views/funcionarios/index.html.erb
@@ -28,7 +28,7 @@
                 <tr>
                   <td><%= link_to funcionario.id, funcionario %></td>
                   <td><%= funcionario.nome %></td>
-                  <td>Vendas</td>
+                  <td><%= funcionario.setor ? funcionario.setor.descricao : '--nenhum--' %></td>
                   <td style="color: green; font-weight:bold">+ 32:40</td>
                   <td class="coluna_dir">
                     <a class="btn btn-primary btn-xs" title="Abonar horas" data-toggle="modal" data-target="#abonar_horas">                      
