--- a/ponto/ponto/app/views/usuarios/index.html.erb
+++ b/ponto/ponto/app/views/usuarios/index.html.erb
@@ -1,29 +1,130 @@
-<h1>Listing usuarios</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Username</th>
-      <th>Setor</th>
-      <th>Tipo</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @usuarios.each do |usuario| %>
-      <tr>
-        <td><%= usuario.username %></td>
-        <td><%= usuario.setor ? usuario.setor.descricao : "" %></td>
-        <td><%= usuario.tipo %></td>
-        <td><%= link_to 'Show', usuario %></td>
-        <td><%= link_to 'Edit', edit_usuario_path(usuario) %></td>
-        <td><%= link_to 'Destroy', usuario, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Usuario', new_usuario_path %>
+    <div class="container">
+      <div class="row">
+        <%= link_to 'Adicionar Usuário', new_usuario_path, class: 'btn btn-primary' %>
+      </div>
+      <div class="row" style="margin-top:10px">
+        <div>
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3 class="panel-title">Usu&aacute;rios</h3>
+              <div class="pull-right">
+                <span class="clickable filter" data-toggle="tooltip" title="Toggle table filter" data-container="body">  								<i class="glyphicon glyphicon-filter"></i>  							</span>
+              </div>
+            </div>
+            <div class="panel-body">
+              <input type="text" class="form-control" id="task-table-filter" data-action="filter" data-filters="#task-table" placeholder="Filter Tasks">
+            </div>
+            <table class="table table-hover" id="task-table">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Nome</th>
+                  <th>Tipo</th>
+                  <th>Setor</th>
+                  <th>Situa&ccedil;&atilde;o</th>
+                  <th style="text-align:right">Op&ccedil;&otilde;es</th>
+                </tr>
+              </thead>
+              <tbody>
+                <% @usuarios.each do |usuario| %>
+                <tr>
+                  <td>1</td>
+                  <td><%= usuario.username %></td>
+                  <td><%= Usuario::TIPO[usuario.tipo] %></td>
+                  <td><%= usuario.setor ? usuario.setor.descricao : "" %></td>
+                  <td>Ativo</td>
+                  <td class="coluna_dir">
+                    <%= link_to "<span class=\"glyphicon glyphicon-pencil\"></span>".html_safe, 
+                        edit_usuario_path(usuario), 
+                        class: "btn btn-primary btn-xs" %>
+                    <%= link_to "<span class=\"glyphicon glyphicon-trash\"></span>".html_safe, 
+                        usuario_path(usuario),
+                        method: :delete,
+                        data: {confirm: 'Deseja excluir?'},
+                        class: "btn btn-danger btn-xs" %>
+                    <%= link_to 'remover', usuario_path(usuario), method: :delete, data: {confirm: 'deseja excluir?'} %>
+                  </td>
+                </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="modal fade" id="contact" tabindex="-1" role="dialog" aria-labelledby="contactLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="panel panel-primary">
+              <div class="panel-heading">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="panel-title" id="contactLabel">Dados do usu&aacute;rio</h4>
+              </div>
+              <form action="#" method="post" accept-charset="utf-8">
+                <div class="modal-body" style="padding: 5px;">
+                  <div class="row">
+                    <div class="col-sm-9 col-md-9 col-lg-9" style="padding-bottom: 10px;">
+                      <div class="form-group">
+                        <label class="control-label">Nome:</label>
+                        <div class="controls">
+                          <input type="text" class="form-control" required autofocus="true">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-3 col-md-3 col-lg-3" style="padding-bottom: 10px;">
+                      <label class="form-label">Situa&ccedil;&atilde;o:</label>
+                      <select class="form-control">
+                        <option value="0">Ativo</option>
+                        <option value="1">Bloqueado</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm-7 col-md-7 col-lg-7" style="padding-bottom: 10px;">
+                      <div class="form-group">
+                        <label class="control-label">E-mail:</label>
+                        <div class="controls">
+                          <input type="text" class="form-control" required>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-5 col-md-5 col-lg-5" style="padding-bottom: 10px;">
+                      <div class="form-group">
+                        <label class="control-label">Senha:</label>
+                        <div class="controls">
+                          <input type="password" class="form-control" required>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm-6 col-md-6 col-lg-6" style="padding-bottom: 10px;">
+                      <label class="form-label">Tipo:</label>
+                      <select class="form-control" required>
+                        <option></option>
+                        <option value="1">Administrador</option>
+                        <option value="2">Respons&aacute;vel do setor</option>
+                        <option value="3">RH</option>
+                      </select>
+                    </div>
+                    <div class="col-sm-6 col-md-6 col-lg-6" style="padding-bottom: 10px;">
+                      <label class="form-label">Setor:</label>
+                      <select class="form-control" disabled>
+                        <option></option>
+                        <option>Vendas</option>
+                        <option>Compras</option>
+                        <option>Teconologia</option>
+                      </select>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel-footer" style="margin-bottom:-14px;">
+                  <input type="submit" class="btn btn-success" value="Gravar">
+                  <input type="reset" class="btn btn-danger" value="Limpar">
+                  <button style="float: right;" type="button" class="btn btn-default btn-close" data-dismiss="modal">Fechar</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
