O botão gerar relatorio esta chamando corretamente o html e passando alguns filtros via get, falta tratar os filtros e buscar as informações do relatório no banco de dados

--- a/ponto/ponto/app/views/relatorios/bancohoras.html.erb
+++ b/ponto/ponto/app/views/relatorios/bancohoras.html.erb
@@ -1,1 +1,94 @@
-relatorio
+<!doctype html>
+<!-- Built with Divshot - http://www.divshot.com -->
+<html>
+  <head>
+    <title>New Page</title>
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="allstyle.css">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js" type="text/javascript"></script>
+    <script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="alljs.js"></script>
+  </head>
+  <body>
+    <div class="container">
+      <table class="table table-list-search">
+        <thead>
+            <tr>
+                <th style="padding-left:30px">Data</th>
+                <th>Batidas</th>
+                <th>Esperado</th>
+                <th>Total do dia</th>
+                <th>Diferença</th>
+                <th>Banco de horas</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td colspan="6">
+                  <span style="font-weight:bold">Funcionário:</span>&nbsp;#1 Maria das Dores
+                  <span style="font-weight:bold;margin-left:20px">Setor:</span>&nbsp;Compras
+                  <span style="font-weight:bold;margin-left:20px">Saldo inicial:</span>&nbsp;00:35  
+                </td>
+            </tr>
+            <tr>
+                <td style="padding-left:30px">01/05/2014</td>
+                <td>08:00, 12:03, 13:32, 18:01</td>
+                <td>08:00</td>
+                <td>08:15</td>
+                <td>+ 00:15</td>
+                <td>+ 00:50</td>
+            </tr>
+            <tr>
+                <td style="padding-left:30px">02/05/2014</td>
+                <td>08:00, 12:03, 13:32, 18:01</td>
+                <td>08:00</td>
+                <td>08:15</td>
+                <td>+ 00:15</td>
+                <td>+ 01:05</td>
+            </tr>
+            <tr>
+                <td style="padding-left:30px">03/05/2014</td>
+                <td>08:00, 12:03, 13:32, 18:01</td>
+                <td>08:00</td>
+                <td>08:15</td>
+                <td>+ 00:15</td>
+                <td>+ 01:20</td>
+            </tr>
+            <tr>
+                <td colspan="6">
+                  <span style="font-weight:bold">Funcionário:</span>&nbsp;#2 Jonas Marras
+                  <span style="font-weight:bold;margin-left:20px">Setor:</span>&nbsp;Compras
+                  <span style="font-weight:bold;margin-left:20px">Saldo inicial:</span>&nbsp;00:50  
+                </td>
+            </tr>
+            <tr>
+                <td style="padding-left:30px">01/05/2014</td>
+                <td>08:00, 12:03, 13:32, 18:01</td>
+                <td>08:00</td>
+                <td>08:15</td>
+                <td>+ 00:15</td>
+                <td>+ 01:05</td>
+            </tr>
+            <tr>
+                <td style="padding-left:30px">02/05/2014</td>
+                <td>08:00, 12:03, 13:32, 18:01</td>
+                <td>08:00</td>
+                <td>08:15</td>
+                <td>+ 00:15</td>
+                <td>+ 01:20</td>
+            </tr>
+            <tr>
+                <td style="padding-left:30px">03/05/2014</td>
+                <td>08:00, 12:03, 13:32, 18:01</td>
+                <td>08:00</td>
+                <td>08:15</td>
+                <td>+ 00:15</td>
+                <td>+ 01:35</td>
+            </tr>
+        </tbody>
+    </table>
+    </div>
+</div>
+  </body>
+</html>
