leitura dos setores e funcionarios com suas batidas no relatorios

--- a/ponto/ponto/app/views/relatorios/bancohoras.html.erb
+++ b/ponto/ponto/app/views/relatorios/bancohoras.html.erb
@@ -1,19 +1,21 @@
-<!doctype html>
-<!-- Built with Divshot - http://www.divshot.com -->
 <html>
+  
   <head>
-    <title>New Page</title>
+    <title>EvajoluTI - Sistema de Controle de Cartão Ponto</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="allstyle.css">
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js" type="text/javascript"></script>
-    <script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="alljs.js"></script>
+    <title>Ponto</title>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
   </head>
   <body>
     <div class="container">
       <table class="table table-list-search">
         <thead>
+            <tr>
+                <th style="padding-left:30px" colspan="6">Filtros: <%= "#{@datainicial} > #{@datafinal}" %></th>
+            </tr>
             <tr>
                 <th style="padding-left:30px">Data</th>
                 <th>Batidas</th>
@@ -27,72 +29,47 @@
             <% @setors.each do |s| %>
                 <tr>
                     <td colspan="6">
-                        <h2><%= s.descricao %></h2>
+                        <h4><%= s.descricao %></h4>
                     </td>
                 </tr>
+                <% s.funcionarios.each do |f| %>
+                    <tr>
+                        <td style="padding-left:30px" colspan="6">
+                          <span style="font-weight:bold">Funcionário:</span>&nbsp;<%= "##{f.id} #{f.nome}" %>
+                          <span style="font-weight:bold;margin-left:20px">Saldo inicial:</span>&nbsp;xx:xx
+                        </td>
+                    </tr>
+                    <% (@datainicial.to_date..@datafinal.to_date).map{ |d| %>
+                        <% 
+                            entrada = nil
+                            saida = nil
+                            saldo_dia = 0
+                        %>
+                        <tr class="<%= d.wday == 0 || d.wday == 6 ? 'warning' : '' %> <%= Feriado.where(data: d).any? ? 'danger' : '' %>">
+                            <td style="padding-left:60px"><%= d.strftime("%d/%m/%Y") %></td>
+                            <td>
+                                <% f.batidas.where(data: d).order(:hora).each do |b| %>
+                                    <%= b.hora.strftime("%H:%M")  %> 
+                                    <%
+                                        if entrada.nil?
+                                            entrada = b.hora
+                                        else
+                                            saida = b.hora
+                                            saldo_dia += (saida - entrada)
+                                            entrada = nil
+                                        end
+                                    %>
+                                <% end %>
+                            </td>
+                            <td>xx:xx</td>
+                            <td><%= Time.at(saldo_dia.to_i.abs).utc.strftime("%H:%M") %></td>
+                            <td>+ xx:xx</td>
+                            <td>+ xx:xx</td>
+                        </tr>
+                    <% } %>
+                <% end %>
             <% end %>
-            <tr>
-                <td colspan="6">
-                  <span style="font-weight:bold">Funcionário:</span>&nbsp;#1 Maria das Dores
-                  <span style="font-weight:bold;margin-left:20px">Setor:</span>&nbsp;Compras
-                  <span style="font-weight:bold;margin-left:20px">Saldo inicial:</span>&nbsp;00:35  
-                </td>
-            </tr>
-            <tr>
-                <td style="padding-left:30px">01/05/2014</td>
-                <td>08:00, 12:03, 13:32, 18:01</td>
-                <td>08:00</td>
-                <td>08:15</td>
-                <td>+ 00:15</td>
-                <td>+ 00:50</td>
-            </tr>
-            <tr>
-                <td style="padding-left:30px">02/05/2014</td>
-                <td>08:00, 12:03, 13:32, 18:01</td>
-                <td>08:00</td>
-                <td>08:15</td>
-                <td>+ 00:15</td>
-                <td>+ 01:05</td>
-            </tr>
-            <tr>
-                <td style="padding-left:30px">03/05/2014</td>
-                <td>08:00, 12:03, 13:32, 18:01</td>
-                <td>08:00</td>
-                <td>08:15</td>
-                <td>+ 00:15</td>
-                <td>+ 01:20</td>
-            </tr>
-            <tr>
-                <td colspan="6">
-                  <span style="font-weight:bold">Funcionário:</span>&nbsp;#2 Jonas Marras
-                  <span style="font-weight:bold;margin-left:20px">Setor:</span>&nbsp;Compras
-                  <span style="font-weight:bold;margin-left:20px">Saldo inicial:</span>&nbsp;00:50  
-                </td>
-            </tr>
-            <tr>
-                <td style="padding-left:30px">01/05/2014</td>
-                <td>08:00, 12:03, 13:32, 18:01</td>
-                <td>08:00</td>
-                <td>08:15</td>
-                <td>+ 00:15</td>
-                <td>+ 01:05</td>
-            </tr>
-            <tr>
-                <td style="padding-left:30px">02/05/2014</td>
-                <td>08:00, 12:03, 13:32, 18:01</td>
-                <td>08:00</td>
-                <td>08:15</td>
-                <td>+ 00:15</td>
-                <td>+ 01:20</td>
-            </tr>
-            <tr>
-                <td style="padding-left:30px">03/05/2014</td>
-                <td>08:00, 12:03, 13:32, 18:01</td>
-                <td>08:00</td>
-                <td>08:15</td>
-                <td>+ 00:15</td>
-                <td>+ 01:35</td>
-            </tr>
+           
         </tbody>
     </table>
     </div>
