criacoa do helper para batidas e inclusao no calendario

--- a/ponto/ponto/app/views/batidas/index.html.erb
+++ b/ponto/ponto/app/views/batidas/index.html.erb
@@ -13,7 +13,7 @@
   <tbody>
     <% @batidas.each do |batida| %>
       <tr>
-        <td><%= batida.funcionario.nome %></td>
+        <td><%= batida.funcionario.nil? ? '' : batida.funcionario.nome %></td>
         <td><%= batida.data %></td>
         <td><%= batida.hora %></td>
         <td><%= link_to 'Show', batida %></td>
